# srmd-ncnn-vulkan-python

./: .gitignore  .gitmodules  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: CI.yml  ci.yml  release.yml
src/: CMakeLists.txt  main.cpp  srmd.i  srmd_ncnn_vulkan.py  srmd_wrapper.cpp  srmd_wrapper.h
srmd_ncnn_vulkan_python/: CMakeLists.txt  srmd_ncnn_vulkan.py
tests/: test_upscale.py
