[metadata]
name = srmd-ncnn-vulkan-python
version = 1.0.1
author = ArchieMeng
author_email = archiemeng@protonmail.com
maintainer = K4YT3X
maintainer_email = i@k4yt3x.com
license = MIT
license_file = LICENSE
platform = any
description = A Python FFI of nihui/srmd-ncnn-vulkan achieved with SWIG
url = https://github.com/media2x/srmd-ncnn-vulkan-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    srmd
    ncnn
    vulkan
    swig

[options]
packages = find:
install_requires = pillow
python_requires = >=3.6
